deploy: 13b993096a0dba87cb1559ad7e9b6c700f09325a

--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -370,30 +370,36 @@ effective, then tunes and adjusts its behavior accordingly.
 </ul>
 </li>
 </ol>
-<h1 id="manifesto-for-software-craftsmanship"><a class="header" href="#manifesto-for-software-craftsmanship">manifesto for software craftsmanship</a></h1>
-<div class="wide-quote">
-<blockquote>
+<h1 id="software-craftmanship"><a class="header" href="#software-craftmanship">software craftmanship</a></h1>
+<div class="text-smaller">
 <p>As aspiring Software Craftsmen we are raising the bar of professional
 software development by practicing it and helping others learn the
 craft. Through this work we have come to value:</p>
+</div>
 <ul>
 <li>Not only working software, but also <strong>well-crafted software</strong></li>
 <li>Not only responding to change, but also <strong>steadily adding value</strong></li>
 <li>Not only individuals and interactions, but also <strong>a community of
 professionals</strong></li>
-<li>Not only customer collaboration, but also <strong>productive
-partnerships</strong></li>
+<li>Not only customer collaboration, but also <strong>productive partnerships</strong></li>
 </ul>
-<p>That is, in pursuit of the items on the left we have found the items
-on the right to be indispensable.</p>
-</blockquote>
+<div class="text-smaller mt-4">
+<p>That is, in pursuit of the items on the left we have found the items on
+the right to be indispensable.</p>
+</div>
+<div class="text-size-1">
+<p>© 2009, the undersigned. This statement may be freely copied in any
+form, but only in its entirety through this notice.</p>
+</div>
+<div class="notes">
+<p>From
+<a href="https://manifesto.softwarecraftsmanship.org/">/manifesto.softwarecraftsmanship.org</a>.</p>
 </div>
 <div class="notes">
 <p>This reads like an answer to the agile manifesto. The working software
 is good, but should well-crafted, which aligns with the ninth agile
 principle: “Continuous attention to technical excellence and good design
 enhances agility.”</p>
-<!-- Accepting change requests is okay, but the change should improve the software. -->
 </div>
 <!--## subway map to agile practices
 &#10;![](borrowed/subway_map_to_agile_practices.svg)-->
