--- a/slides/01_sdlc.html
+++ b/slides/01_sdlc.html
@@ -312,14 +312,13 @@ effective, then tunes and adjusts its behavior accordingly.
 </ol>
 </section></section>
 <section>
-<section id="manifesto-for-software-craftsmanship"
-class="title-slide slide level1">
-<h1>manifesto for software craftsmanship</h1>
-<div class="wide-quote">
-<blockquote>
+<section id="software-craftmanship" class="title-slide slide level1">
+<h1>software craftmanship</h1>
+<div class="text-smaller">
 <p>As aspiring Software Craftsmen we are raising the bar of professional
 software development by practicing it and helping others learn the
 craft. Through this work we have come to value:</p>
+</div>
 <ul>
 <li>Not only working software, but also <strong>well-crafted
 software</strong></li>
@@ -330,16 +329,23 @@ of professionals</strong></li>
 <li>Not only customer collaboration, but also <strong>productive
 partnerships</strong></li>
 </ul>
+<div class="text-smaller mt-4">
 <p>That is, in pursuit of the items on the left we have found the items
 on the right to be indispensable.</p>
-</blockquote>
 </div>
+<div class="text-size-1">
+<p>© 2009, the undersigned. This statement may be freely copied in any
+form, but only in its entirety through this notice.</p>
+</div>
+<aside class="notes">
+<p>From <a
+href="https://manifesto.softwarecraftsmanship.org/">/manifesto.softwarecraftsmanship.org</a>.</p>
+</aside>
 <aside class="notes">
 <p>This reads like an answer to the agile manifesto. The working
 software is good, but should well-crafted, which aligns with the ninth
 agile principle: “Continuous attention to technical excellence and good
-design enhances agility.”
-<!-- Accepting change requests is okay, but the change should improve the software. --></p>
+design enhances agility.”</p>
 </aside>
 <!--## subway map to agile practices
 
