deploy: 5e583a763e16924f9d17fa00dd16c47342a0f3be

--- a/print.html
+++ b/print.html
@@ -482,7 +482,32 @@ anymore</a> - by Brett Cannon</li>
 <li><a href="lectures/slides/mindmap.html">mindmap</a></li>
 <li><a href="lectures/slides/mock_exam.html">mock exam</a></li>
 </ol>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="goal-of-this-course"><a class="header" href="#goal-of-this-course">goal of this course</a></h1>
+<ul>
+<li>provide a common foundation in software engineering for students from
+various backgrounds</li>
+<li>provide a shared terminology to be able to work seamlessly with
+software developers</li>
+<li>introduce the fundamentals of modern software development
+methodologies and life cycle models
+<ul>
+<li>with a focusing in detail on Scrum and Kanban</li>
+</ul>
+</li>
+<li>introduce <strong>requirements analysis</strong> and <strong>software architecture</strong>
+<ul>
+<li>both in theory and in practice</li>
+</ul>
+</li>
+<li>provide an insight to code quality, code review, testing and
+automation</li>
+</ul>
+<!--During the practical classes, the students explore and document the requirements of a software system.
+Then, during the second half of the semester, they design its architecture.
+For requirements analysis, the course applies user story mapping in accordance with the agile principles.
+For the software design, the course uses the C4 model, which is a set of hierarchical diagrams describing the architecture of a software system.
+The practical classes are workshops in which the students work in teams on the project assignment under an instructor's guidance.-->
+<h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
 <col style="width: 4%" />
@@ -597,6 +622,7 @@ mapping</td>
 </ul>
 </li>
 <li><a href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
+<li>also uploaded to Moodle as PDFs</li>
 </ul>
 </div>
 <div class="column" width="40%">
