--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -136,6 +136,33 @@ calc(100% - 1.25rem)" data-background-size="125px">
   <p class="date">gergo.pinter@uni-corvinus.hu</p>
 </section>
 
+<section id="goal-of-this-course" class="title-slide slide level1">
+<h1>goal of this course</h1>
+<ul>
+<li>provide a common foundation in software engineering for students
+from various backgrounds</li>
+<li>provide a shared terminology to be able to work seamlessly with
+software developers</li>
+<li>introduce the fundamentals of modern software development
+methodologies and life cycle models
+<ul>
+<li>with a focusing in detail on Scrum and Kanban</li>
+</ul></li>
+<li>introduce <strong>requirements analysis</strong> and
+<strong>software architecture</strong>
+<ul>
+<li>both in theory and in practice</li>
+</ul></li>
+<li>provide an insight to code quality, code review, testing and
+automation</li>
+</ul>
+<!--During the practical classes, the students explore and document the requirements of a software system.
+Then, during the second half of the semester, they design its architecture.
+For requirements analysis, the course applies user story mapping in accordance with the agile principles.
+For the software design, the course uses the C4 model, which is a set of hierarchical diagrams describing the architecture of a software system.
+The practical classes are workshops in which the students work in teams on the project assignment under an instructor's guidance.-->
+</section>
+
 <section id="schedule" class="title-slide slide level1"
 data-visibility="hidden">
 <h1 data-visibility="hidden">schedule</h1>
@@ -389,6 +416,7 @@ mapping</td>
 </ul></li>
 <li><a
 href="https://pintergreg.github.io/software-engineering/">pintergreg.github.io/software-engineering</a></li>
+<li>also uploaded to Moodle as PDFs</li>
 </ul>
 </div><div class="column" style="width:40%;">
 <p><img data-src="../assets/qr_code.png" /></p>
