deploy: 21a555d3ba68f8a77dcfac62675dcd023c277ddc

--- a/print.html
+++ b/print.html
@@ -243,6 +243,9 @@ by Nick Muldoon</li>
 <li><a href="https://www.nngroup.com/articles/user-story-mapping/">Mapping User Stories in
 Agile</a> - by Anna
 Kaley</li>
+<li><a href="https://plan.io/blog/user-story-mapping/">A Guide to User Story Mapping: Templates and Examples (How to Map
+User Stories)</a> by Jory
+MacKay</li>
 <li><a href="lectures/resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
