--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -242,6 +242,9 @@ by Nick Muldoon</li>
 <li><a href="https://www.nngroup.com/articles/user-story-mapping/">Mapping User Stories in
 Agile</a> - by Anna
 Kaley</li>
+<li><a href="https://plan.io/blog/user-story-mapping/">A Guide to User Story Mapping: Templates and Examples (How to Map
+User Stories)</a> by Jory
+MacKay</li>
 <li><a href="resources/quickstart-guide-to-user-story-mapping.pdf">Quickstart Guide to User Story
 Mapping</a></li>
 </ul>
