deploy: af47c82152d0e2d8789486e5648ec60f5037af0d

--- a/print.html
+++ b/print.html
@@ -497,7 +497,7 @@ methodologies and life cycle models
 <li>with a focusing in detail on Scrum and Kanban</li>
 </ul>
 </li>
-<li>introduce <strong>requirements analysis</strong> and <strong>software architecture</strong>
+<li>introduce <strong>requirements analysis</strong> and <strong>software modelling</strong>
 <ul>
 <li>both in theory and in practice</li>
 </ul>
@@ -952,6 +952,10 @@ craftmanship (later)</li>
 </div>
 </div>
 <h1 id="software-growth"><a class="header" href="#software-growth">software growth</a></h1>
+<h2 id="why-does-software-grow"><a class="header" href="#why-does-software-grow">why does software grow?</a></h2>
+<div class="fragment r-fit-text">
+<p>because we want<br> more and more functionality</p>
+</div>
 <h2 id="software-growth--cont"><a class="header" href="#software-growth--cont">software growth – cont.</a></h2>
 <div class="columns">
 <div class="column" width="50%">
