--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -149,7 +149,7 @@ methodologies and life cycle models
 <li>with a focusing in detail on Scrum and Kanban</li>
 </ul></li>
 <li>introduce <strong>requirements analysis</strong> and
-<strong>software architecture</strong>
+<strong>software modelling</strong>
 <ul>
 <li>both in theory and in practice</li>
 </ul></li>
@@ -776,6 +776,12 @@ craftmanship (later)</li>
 <section id="software-growth" class="title-slide slide level1">
 <h1>software growth</h1>
 
+</section>
+<section id="why-does-software-grow" class="slide level2">
+<h2>why does software grow?</h2>
+<div class="fragment r-fit-text">
+<p>because we want<br> more and more functionality</p>
+</div>
 </section>
 <section id="software-growth-cont." class="slide level2">
 <h2>software growth – cont.</h2>
