deploy: da97c17c6e92afb7b327cf650f91343453d53972

--- a/print.html
+++ b/print.html
@@ -505,11 +505,28 @@ methodologies and life cycle models
 <li>provide an insight to code quality, code review, testing and
 automation</li>
 </ul>
-<!--During the practical classes, the students explore and document the requirements of a software system.
-Then, during the second half of the semester, they design its architecture.
-For requirements analysis, the course applies user story mapping in accordance with the agile principles.
-For the software design, the course uses the C4 model, which is a set of hierarchical diagrams describing the architecture of a software system.
-The practical classes are workshops in which the students work in teams on the project assignment under an instructor's guidance.-->
+<h2 id="practise"><a class="header" href="#practise">practise</a></h2>
+<ul>
+<li>during the practical classes, the students explore and document the
+requirements of a software system
+<ul>
+<li>using <strong>user story mapping</strong> in accordance with the agile principles</li>
+</ul>
+</li>
+<li>then, during the second half of the semester, they design its
+architecture
+<ul>
+<li>using the <strong>C4 model</strong>, which is a set of hierarchical diagrams
+describing the architecture of a software system</li>
+</ul>
+</li>
+<li>the practical classes are <strong>workshops</strong> in which the <strong>students work
+in teams</strong>
+<ul>
+<li>under an instructor’s guidance</li>
+</ul>
+</li>
+</ul>
 <h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
@@ -952,11 +969,29 @@ craftmanship (later)</li>
 </div>
 </div>
 <h1 id="software-growth"><a class="header" href="#software-growth">software growth</a></h1>
+<div class="columns">
+<div class="column" width="50%">
+<ul>
+<li>number of lines of code is increasing</li>
+</ul>
+</div>
+<div class="column" width="50%">
+<figure>
+<img src="lectures/figures/firefox_codebase_growth.svg"
+alt="growth of Firefox codebase" />
+<figcaption aria-hidden="true">growth of Firefox codebase</figcaption>
+</figure>
+</div>
+</div>
+<div class="text-smaller">
+<p>further <a href="https://informationisbeautiful.net/visualizations/million-lines-of-code/">codebase growth
+infographic</a></p>
+</div>
 <h2 id="why-does-software-grow"><a class="header" href="#why-does-software-grow">why does software grow?</a></h2>
 <div class="fragment r-fit-text">
 <p>because we want<br> more and more functionality</p>
 </div>
-<h2 id="software-growth--cont"><a class="header" href="#software-growth--cont">software growth – cont.</a></h2>
+<h2 id="software-growth--aircrafts"><a class="header" href="#software-growth--aircrafts">software growth – aircrafts</a></h2>
 <div class="columns">
 <div class="column" width="50%">
 <div class="wide-quote mt-4">
@@ -1151,6 +1186,11 @@ to be one of our biggest releases of all time</p>
 </ul>
 </li>
 </ul>
+<div class="text-smaller mt-2">
+<p>a more technical read: <a href="https://www.linux.com/news/why-linuxs-biggest-ever-kernel-release-is-really-no-big-deal/">Why Linux’s biggest ever kernel release is
+really no big
+deal</a></p>
+</div>
 <h1 id="version-control"><a class="header" href="#version-control">version control</a></h1>
 <div class="columns">
 <div class="column mt-4" width="55%">
