--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -136,6 +136,7 @@ calc(100% - 1.25rem)" data-background-size="125px">
   <p class="date">gergo.pinter@uni-corvinus.hu</p>
 </section>
 
+<section>
 <section id="goal-of-this-course" class="title-slide slide level1">
 <h1>goal of this course</h1>
 <ul>
@@ -156,13 +157,29 @@ methodologies and life cycle models
 <li>provide an insight to code quality, code review, testing and
 automation</li>
 </ul>
-<!--During the practical classes, the students explore and document the requirements of a software system.
-Then, during the second half of the semester, they design its architecture.
-For requirements analysis, the course applies user story mapping in accordance with the agile principles.
-For the software design, the course uses the C4 model, which is a set of hierarchical diagrams describing the architecture of a software system.
-The practical classes are workshops in which the students work in teams on the project assignment under an instructor's guidance.-->
 </section>
-
+<section id="practise" class="slide level2">
+<h2>practise</h2>
+<ul>
+<li>during the practical classes, the students explore and document the
+requirements of a software system
+<ul>
+<li>using <strong>user story mapping</strong> in accordance with the
+agile principles</li>
+</ul></li>
+<li>then, during the second half of the semester, they design its
+architecture
+<ul>
+<li>using the <strong>C4 model</strong>, which is a set of hierarchical
+diagrams describing the architecture of a software system</li>
+</ul></li>
+<li>the practical classes are <strong>workshops</strong> in which the
+<strong>students work in teams</strong>
+<ul>
+<li>under an instructor’s guidance</li>
+</ul></li>
+</ul>
+</section></section>
 <section id="schedule" class="title-slide slide level1"
 data-visibility="hidden">
 <h1 data-visibility="hidden">schedule</h1>
@@ -775,7 +792,24 @@ craftmanship (later)</li>
 <section>
 <section id="software-growth" class="title-slide slide level1">
 <h1>software growth</h1>
-
+<div class="columns">
+<div class="column" style="width:50%;">
+<ul>
+<li>number of lines of code is increasing</li>
+</ul>
+</div><div class="column" style="width:50%;">
+<figure>
+<img data-src="figures/firefox_codebase_growth.svg"
+alt="growth of Firefox codebase" />
+<figcaption aria-hidden="true">growth of Firefox codebase</figcaption>
+</figure>
+</div>
+</div>
+<div class="text-smaller">
+<p>further <a
+href="https://informationisbeautiful.net/visualizations/million-lines-of-code/">codebase
+growth infographic</a></p>
+</div>
 </section>
 <section id="why-does-software-grow" class="slide level2">
 <h2>why does software grow?</h2>
@@ -783,8 +817,8 @@ craftmanship (later)</li>
 <p>because we want<br> more and more functionality</p>
 </div>
 </section>
-<section id="software-growth-cont." class="slide level2">
-<h2>software growth – cont.</h2>
+<section id="software-growth-aircrafts" class="slide level2">
+<h2>software growth – aircrafts</h2>
 <div class="columns">
 <div class="column" style="width:50%;">
 <div class="wide-quote mt-4">
@@ -991,6 +1025,11 @@ out… 5.8 looks to be one of our biggest releases of all time</p>
 <li>rigorous and automated testing</li>
 </ul></li>
 </ul>
+<div class="text-smaller mt-2">
+<p>a more technical read: <a
+href="https://www.linux.com/news/why-linuxs-biggest-ever-kernel-release-is-really-no-big-deal/">Why
+Linux’s biggest ever kernel release is really no big deal</a></p>
+</div>
 </section></section>
 <section>
 <section id="version-control" class="title-slide slide level1">
