deploy: ccbaf3db821b6aea9c401fc07200337ea7e4c760

--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -830,7 +830,7 @@ for explanations constructed with the smallest possible set of elements.
 Attributed to William of Ockham, a 14th-century English philosopher and
 theologian. The principle is sometimes paraphrased as “of two competing
 theories, the simpler explanation of an entity is to be preferred.”
-(Wikipedia contributors, 2025)</p>
+(Wikipedia contributors, 2025b)</p>
 </div>
 <h2 id="linux-58--800000-new-lines-of-code"><a class="header" href="#linux-58--800000-new-lines-of-code">Linux 5.8 – 800,000 new lines of code</a></h2>
 <div class="text-smaller">
@@ -1013,10 +1013,10 @@ we do not know we don’t know.</p>
 </tr>
 </tbody>
 </table>
-<p><span class="text-smaller">source: (<strong>bykovski2020simple?</strong>)</span></p>
+<p><span class="text-smaller">source: (Bykovski, 2020)</span></p>
 <h2 id="complexity-classes-1"><a class="header" href="#complexity-classes-1">complexity classes</a></h2>
-<p><span class="text-smaller">from Michael Bykovski’s essay
-(<strong>bykovski2020simple?</strong>)</span></p>
+<p><span class="text-smaller">from Michael Bykovski’s essay (Bykovski,
+2020)</span></p>
 <ul>
 <li>in a simple system, we know the knowns, everything is predictable,
 it’s easy to understand the system</li>
@@ -1025,7 +1025,7 @@ it’s easy to understand the system</li>
 <li>it requires analysis to know the unknowns, but the system is
 measurable</li>
 <li>it is the province of engineers, surgeons, intelligence analysts,
-lawyers, and other experts (<strong>enwiki:1300921689?</strong>)</li>
+lawyers, and other experts (Wikipedia contributors, 2025a)</li>
 </ul>
 </li>
 <li>in a complex system, the knowns are unknown to us, but we are aware of
@@ -1102,6 +1102,15 @@ Architecture represents the significant <strong>design decisions</strong> that
 shape a system, where significant is measured by cost of change.</p>
 <p>– Grady Booch</p>
 </blockquote>
+<h2 id="-2"><a class="header" href="#-2"></a></h2>
+<blockquote>
+<p>Architecture is the decisions that you wish you could get right early
+in a project.</p>
+<p>– Ralph Johnson</p>
+</blockquote>
+<p>. . .</p>
+<p>to do that, you need to know all the unknowns, so you need
+<strong>requirements analysis</strong>, and <strong>learning</strong> the new/unknown technology</p>
 <h1 id="topologies"><a class="header" href="#topologies">topologies</a></h1>
 <div class="columns">
 <div class="column" width="33%">
@@ -1152,6 +1161,14 @@ Architecture</a></p>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
+<div id="ref-bykovski2020simple" class="csl-entry">
+<p>Bykovski, M. (2020). <em>Simple vs. Complicated vs. Complex vs. chaotic</em>.
+<a href="
+                   https://medium.com/better-programming/simple-vs-complicated-vs-complex-vs-chaos-737b5964849d
+                    " class="uri">
+https://medium.com/better-programming/simple-vs-complicated-vs-complex-vs-chaos-737b5964849d
+</a>.</p>
+</div>
 <div id="ref-charette2009this" class="csl-entry">
 <p>Charette, R. N. (2009). <em>This car runs on code</em>. <a href="
                    https://spectrum.ieee.org/this-car-runs-on-code
@@ -1218,8 +1235,13 @@ encyclopedia</em>. <a href="
 https://en.wikipedia.org/w/index.php?title=Software_rot&amp;oldid=1236668404
 </a>.</p>
 </div>
+<div id="ref-enwiki:1300921689" class="csl-entry">
+<p>Wikipedia contributors. (2025a). <em>Cynefin framework — Wikipedia, the
+free encyclopedia</em>.
+<a href="https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689">https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689</a>.</p>
+</div>
 <div id="ref-enwiki:1305790618" class="csl-entry">
-<p>Wikipedia contributors. (2025). <em>Occam’s razor — Wikipedia, the free
+<p>Wikipedia contributors. (2025b). <em>Occam’s razor — Wikipedia, the free
 encyclopedia</em>.
 <a href="https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&amp;oldid=1305790618">https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&amp;oldid=1305790618</a>.</p>
 </div>
