--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -1189,13 +1189,12 @@ things we do not know we don’t know.</p>
 </tbody>
 </table>
 <p><span class="text-smaller">source: <span class="citation"
-data-cites="bykovski2020simple"><strong>bykovski2020simple?</strong></span></span></p>
+data-cites="bykovski2020simple">[11]</span></span></p>
 </section>
 <section id="complexity-classes-1" class="slide level2">
 <h2>complexity classes</h2>
 <p><span class="text-smaller">from Michael Bykovski’s essay <span
-class="citation"
-data-cites="bykovski2020simple"><strong>bykovski2020simple?</strong></span></span></p>
+class="citation" data-cites="bykovski2020simple">[11]</span></span></p>
 <ul>
 <li>in a simple system, we know the knowns, everything is predictable,
 it’s easy to understand the system</li>
@@ -1205,7 +1204,7 @@ it’s easy to understand the system</li>
 measurable</li>
 <li>it is the province of engineers, surgeons, intelligence analysts,
 lawyers, and other experts <span class="citation"
-data-cites="enwiki:1300921689"><strong>enwiki:1300921689?</strong></span></li>
+data-cites="enwiki:1300921689">[12]</span></li>
 </ul></li>
 <li>in a complex system, the knowns are unknown to us, but we are aware
 of our uncertainty</li>
@@ -1296,6 +1295,19 @@ decisions</strong> that shape a system, where significant is measured by
 cost of change.</p>
 <p>– Grady Booch</p>
 </blockquote>
+</section>
+<section id="section-2" class="slide level2">
+<h2></h2>
+<blockquote>
+<p>Architecture is the decisions that you wish you could get right early
+in a project.</p>
+<p>– Ralph Johnson</p>
+</blockquote>
+<div class="fragment">
+<p>to do that, you need to know all the unknowns, so you need
+<strong>requirements analysis</strong>, and <strong>learning</strong>
+the new/unknown technology</p>
+</div>
 </section></section>
 <section id="topologies" class="title-slide slide level1">
 <h1>topologies</h1>
@@ -1442,6 +1454,24 @@ class="csl-right-inline">Wikipedia contributors, <span>“Occam’s razor —
 <span>Wikipedia</span><span>,</span> the free encyclopedia.”</span> <a
 href="https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&amp;oldid=1305790618"
 class="uri">https://en.wikipedia.org/w/index.php?title=Occam%27s_razor&amp;oldid=1305790618</a>,
+2025.</div>
+</div>
+<div id="ref-bykovski2020simple" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[11] </div><div class="csl-right-inline">M.
+Bykovski, <span>“Simple vs. Complicated vs. Complex vs. chaotic.”</span>
+<a href="
+                   https://medium.com/better-programming/simple-vs-complicated-vs-complex-vs-chaos-737b5964849d
+                    " class="uri">
+                   https://medium.com/better-programming/simple-vs-complicated-vs-complex-vs-chaos-737b5964849d
+</a>, 03-Mar-2020.</div>
+</div>
+<div id="ref-enwiki:1300921689" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[12] </div><div
+class="csl-right-inline">Wikipedia contributors, <span>“Cynefin
+framework — <span>Wikipedia</span><span>,</span> the free
+encyclopedia.”</span> <a
+href="https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689"
+class="uri">https://en.wikipedia.org/w/index.php?title=Cynefin_framework&amp;oldid=1300921689</a>,
 2025.</div>
 </div>
 </div>
