--- a/print.html
+++ b/print.html
@@ -968,13 +968,81 @@ craftmanship (later)</li>
 </ul>
 </div>
 </div>
-<h1 id="software-growth"><a class="header" href="#software-growth">software growth</a></h1>
-<div class="columns">
-<div class="column" width="50%">
-<ul>
-<li>number of lines of code is increasing</li>
-</ul>
+<h1 id="how-big-are-softwares"><a class="header" href="#how-big-are-softwares">how big are softwares?</a></h1>
+<p>software is often measured by the source lines of code</p>
+<!--- Vanilla Music Player for Android (1.3.2): 48 thousand lines of code (LOC)
+- VLC for Android (3.6.5): 264 thousand LOC-->
+<!--- Joplin 3.3.13 (note taking app): 1 million lines of code
+    - sync capabilities-->
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: left;">app</th>
+<th style="text-align: right;">version</th>
+<th style="text-align: right;">LOC (million)</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;">Vanilla Music Player for Android</td>
+<td style="text-align: right;">1.3.2</td>
+<td style="text-align: right;">0.048</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">VLC for Android</td>
+<td style="text-align: right;">3.6.5</td>
+<td style="text-align: right;">0.265</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Telegram for Android (messaging app)</td>
+<td style="text-align: right;">11.14.1</td>
+<td style="text-align: right;">6.6</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">GCC (compiler)</td>
+<td style="text-align: right;">15.1</td>
+<td style="text-align: right;">15</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Firefox (web browser)</td>
+<td style="text-align: right;">142</td>
+<td style="text-align: right;">45</td>
+</tr>
+<tr class="even">
+<td style="text-align: left;">Windows <span class="citation"
+data-cites="quill2024how">(<strong>quill2024how?</strong>)</span></td>
+<td style="text-align: right;">10</td>
+<td style="text-align: right;">50</td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;">Linux (kernel)</td>
+<td style="text-align: right;">6.16</td>
+<td style="text-align: right;">40</td>
+</tr>
+</tbody>
+</table>
+<div class="text-smaller">
+<p>measurements made with <a href="https://github.com/XAMPPRocky/tokei">tokei</a>, the
+whole repo is counted</p>
 </div>
+<div class="notes">
+<p>Microsoft does not disclose the actual value, the codebase size of
+Windows is only a estimation (<strong>quill2024how?</strong>).</p>
+</div>
+<h2 id="software-growth"><a class="header" href="#software-growth">software growth</a></h2>
+<p>number of lines of code is increasing</p>
+<!--- Windows 10: 50 million (estimated) [@quill2024how]
+    - 3 million for the kernel
+- Linux 6.16 (kernel): 40 million [LOC]{.tooltip title="lines of code"}
+    - [18.8 million C code lines]{.text-smaller}
+    - [2.8 M C comment and 3.6 M blank lines]{.text-smaller}
+    - monolithic architecture
+&#10;::: {.fragment}
+- web browser (Firefox): 45+ million [LOC]{.tooltip title="lines of code"}
+    - [a modern browser has the complexity of an OS]{.text-smaller}
+- compiler (GCC): 15+ million [LOC]{.tooltip title="lines of code"}
+:::-->
+<div class="columns">
 <div class="column" width="50%">
 <figure>
 <img src="lectures/figures/firefox_codebase_growth.svg"
@@ -982,15 +1050,23 @@ alt="growth of Firefox codebase" />
 <figcaption aria-hidden="true">growth of Firefox codebase</figcaption>
 </figure>
 </div>
+<div class="column fragment" width="50%">
+<figure>
+<img src="lectures/figures/gcc_codebase_growth.svg"
+alt="growth of GCC codebase" />
+<figcaption aria-hidden="true">growth of GCC codebase</figcaption>
+</figure>
 </div>
-<div class="text-smaller">
-<p>further <a href="https://informationisbeautiful.net/visualizations/million-lines-of-code/">codebase growth
-infographic</a></p>
+</div>
+<div class="text-smaller mt-2">
+<p><a href="https://informationisbeautiful.net/visualizations/million-lines-of-code/">infographic</a>
+about codebase growth</p>
 </div>
 <h2 id="why-does-software-grow"><a class="header" href="#why-does-software-grow">why does software grow?</a></h2>
 <div class="fragment r-fit-text">
 <p>because we want<br> more and more functionality</p>
 </div>
+<!-- Linux kernel is estimated to have over 450k functions (v5.7) according to project lead developer Greg Kroah-Hartman  -->
 <h2 id="software-growth--aircrafts"><a class="header" href="#software-growth--aircrafts">software growth – aircrafts</a></h2>
 <div class="columns">
 <div class="column" width="50%">
